Added nifications configuration.

--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -183,7 +183,7 @@
             <stv-signup id="stvSignup" on-login="handleLogin" menu-option="signup">
             </stv-signup>
 
-            <stv-profile id="stvProfile" menu-option="profile">
+            <stv-profile id="stvProfile" menu-option="profile" user-data={{userData}}>
             </stv-profile>
 
             <stv-remember menu-option="remember">
