--- a/src/stv-profile.html
+++ b/src/stv-profile.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-profile">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-        :host {
+         :host {
             display: block;
             position: absolute;
             box-sizing: border-box;
@@ -71,7 +71,26 @@
 
             <div id="button" class="stv-btn stv-btn-shdw" on-click="handleChangePasswordForm">Change password</div>
         </form>
-
+        <br>
+        <br>
+        <br>
+        <div class="title">
+            <div>
+                Notifications
+            </div>
+            <div class="icon">
+                <i class="fa fa-envelope-o"></i>
+            </div>
+        </div>
+        <br>
+        <div style="font-size:1.2em;">
+            <label class="stv-control" style="cursor:pointer; text-align:center;">
+                <input id="jobNotificationCheckbox" type="checkbox" name="job" on-click="handleClickJobNotification">
+                <span>Send an E-mail on job finish.</span>
+            </label>
+        </div>
+        <br>
+        <br>
         <!-- <form id="formEmail">
             <label class="stv">New e-mail</label>
             <input class="stv" type="email" value="{{email::input}}" required>
@@ -89,6 +108,10 @@
                 email: {
                     type: String,
                     value: ''
+                },
+                userData: {
+                    type: Object,
+                    observer: 'userDataChanged'
                 },
                 oldpassword: {
                     type: String,
@@ -112,6 +135,33 @@
                 this.set('password', '');
                 this.set('passwordCheck', '');
                 this.set('message', '');
+            },
+            userDataChanged: function(neo, old) {
+                if (this.userData != null) {
+                    if (this.userData.notifications != null && this.userData.notifications.job == true) {
+                        this.$.jobNotificationCheckbox.checked = true;
+                    } else {
+                        this.$.jobNotificationCheckbox.checked = false;
+                    }
+                }
+            },
+            handleClickJobNotification: function(e) {
+                var me = this;
+                e.preventDefault();
+                if (this.userData != null) {
+                    if (this.userData.notifications != null) {
+                        var obj = {
+                            job: !this.userData.notifications.job
+                        };
+                        SteviaManager.updateUserNotifications(this.userData.name, obj, function(notifications) {
+                            for (var key in notifications) {
+                                if (key == 'job') {
+                                    me.$.jobNotificationCheckbox.checked = notifications[key];
+                                }
+                            }
+                        });
+                    }
+                }
             },
             handleChangePasswordForm: function(e) {
                 var me = this;
