Removed console.log.

--- a/src/stv-cluster-status.html
+++ b/src/stv-cluster-status.html
@@ -136,7 +136,7 @@
                     var jsonObject = JSON.parse(this.responseText);
                     me.set('_serverStatusObject', jsonObject);
                     me.set('_connexionLatency', new Date() - startRequestTime);
-                    console.log(me._serverStatusObject);
+                    // console.log(me._serverStatusObject);
                 }
 
                 oReq.open("GET", url);
