--- a/src/report/stv-report.html
+++ b/src/report/stv-report.html
@@ -174,6 +174,12 @@
             padding-left: 7px;
         }
 
+        .delete-job,
+        .download-job,
+        .relaunch-job {
+            cursor: pointer;
+        }
+
         .delete-job:hover {
             color: #b30000 !important;
         }
@@ -921,7 +927,7 @@
             handleDownloadJob: function(e) {
                 var me = this;
                 var url = SteviaManager.jobs.download({
-                  id:me.job._id,
+                    id: me.job._id,
                     query: {
                         sid: Cookies("bioinfo_sid")
                     },
