--- a/src/stv-signup.html
+++ b/src/stv-signup.html
@@ -55,7 +55,7 @@
         </div>
         <form id="form" on-keypress="handleFormKey">
             <label class="stv">User name:</label>
-            <input class="stv" type="text" value="{{name::input}}" required pattern="[a-zA-Z0-9]+">
+            <input class="stv" type="text" value="{{name::input}}" required pattern="[a-zA-Z0-9._]+">
             <br>
             <label class="stv">E-mail:</label>
             <input class="stv" type="email" value="{{email::input}}" required>
