--- a/src/report/stv-report.html
+++ b/src/report/stv-report.html
@@ -334,7 +334,7 @@
                 var outputParamsEl = reportXML.querySelector('output-params');
                 var outputParams = outputParamsEl.childNodes;
 
-                if (inputParams.length == 0) {
+                if (inputParams.length == 0 || (inputParams.length == 1 && inputParams[0].textContent.trim() == "")) {
                     this.$.inputParamsHeader.hidden = true;
                 } else {
                     this._processParams(reportXML, inputParams, this.$.inputParams);
@@ -743,12 +743,13 @@
                 var el = document.createElement('div');
 
                 var pw = document.createElement('pathway-viewer');
-                pw.style.height = '800px';
+                pw.style.height = '1000px';
 
                 pw.set('hideAltered', true);
                 pw.set('sessionFileNameMap', this.fileNameMap);
                 pw.set('path', outEl.getAttribute('path'));
                 pw.set('pathType', outEl.getAttribute('path-type'));
+                pw.set('showHipathiaLegend', true);
 
                 // pw.style.border = "1px solid #d3d3d3";
                 // pw.style.boxShadow = "0px 0px 4px 0px rgba(0, 0, 0, 0.2)";
