--- a/src/stv-login.html
+++ b/src/stv-login.html
@@ -70,7 +70,7 @@
         </div>
         <form id="form" on-keypress="handleFormKey">
             <label class="stv">User name:</label>
-            <input class="stv" type="text" value="{{name::input}}" required pattern="[a-zA-Z0-9]+">
+            <input class="stv" type="text" value="{{name::input}}" required pattern="[a-zA-Z0-9._]+">
 
             <div class="right">
                 <span hidden$={{hideSignup}} class="shortcut" on-click="handleSignup">Create new user...</span>
@@ -141,7 +141,7 @@
             },
             handleForm: function(e) {
                 this.set('message', '');
-                
+
                 if (this.$.form.checkValidity()) {
                     this._login();
                 }else{
