--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -101,6 +101,15 @@
             background-color: var(--light-button-color) !important;
         }
 
+         :host[validating] #uploadButton {
+            background-color: #ddd !important;
+            color: #fff !important;
+        }
+
+         :host[validating] #uploadButton:hover {
+            background-color: #888 !important;
+        }
+
         #footer {
             box-sizing: border-box;
             height: 30px;
@@ -211,6 +220,7 @@
             },
             validating: {
                 type: Boolean,
+                reflectToAttribute: true,
                 value: false
             }
         },
@@ -274,12 +284,12 @@
                         });
                     }
                 } else if (this.$.validator.warningCount > 0) {
-                    new StvDialog().confirm("File contains warning messages, are you sure?",function(res){
-                        if(res ==true){
+                    new StvDialog().confirm("File contains warning messages, are you sure?", function(res) {
+                        if (res == true) {
                             me.handleForm();
                         }
                     });
-                }else{
+                } else {
                     this.handleForm();
                 }
             }
@@ -294,7 +304,7 @@
                     selBioformat = this.$.bioformatSelect.selectedBioformat;
                 }
                 if (selBioformat == null) {
-                    alert("Please select a bioformat");
+                    new StvDialog().alert("Please select a bioformat");
                     return;
                 }
 
@@ -347,7 +357,7 @@
                     };
                     SteviaManager.files.upload(config);
                 } else {
-                    alert("Please select a file");
+                    new StvDialog().alert("Please select a file");
                     return;
                 }
             }
@@ -368,7 +378,7 @@
                     selBioformat = this.$.bioformatSelect.selectedBioformat;
                 }
                 if (selBioformat == null) {
-                    alert("Please select a bioformat");
+                    new StvDialog().alert("Please select a bioformat");
                     this.validating = false;
                     return;
                 }
@@ -385,7 +395,7 @@
                         var bioformatValidator = globalContext[selBioformat.validator];
 
                         if (typeof bioformatValidator !== "function") {
-                            alert("Validator '" + bioformatValidator + "' not recognized.");
+                            new StvDialog().alert("Validator '" + bioformatValidator + "' not recognized.");
                             return;
                         }
                         validator = new bioformatValidator({});
@@ -408,6 +418,14 @@
         },
         handleValidatorStop: function(e) {
             this.validating = false;
+
+            if (this.$.validator.errorCount > 0 && this.$.validator.warningCount > 0) {
+                this.message = "File contains errors and warning messages."
+            } else if (this.$.validator.errorCount > 0) {
+                this.message = "The file contains errors."
+            } else if (this.$.validator.warningCount > 0) {
+                this.message = "File contains warning messages."
+            }
 
             if (this._wantRevalidate == true) {
                 this._wantRevalidate = null;
