--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -97,7 +97,8 @@
         }
 
         .upload-btn {
-            color: var(--default-primary-color);
+            background-color: var(--dark-button-color) !important;
+            color: var(--text-primary-color) !important;
         }
 
         .bar>div {
